--- a/index.html
+++ b/index.html
@@ -3,33 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>مملكة علوش | V134 👑</title>
+    <title>مملكة علوش | النسخة الأصلية 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         body { background: #000; color: white; font-family: 'Cairo', sans-serif; display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; }
         .box { width: 90%; max-width: 380px; background: #111; padding: 30px; border-radius: 20px; border: 2px solid #ffd700; text-align: center; }
-        input { width: 100%; padding: 14px; margin: 10px 0; background: #1a1a1a; border: 1px solid #333; border-radius: 12px; color: white; text-align: center; font-size: 16px; }
-        .btn { width: 100%; padding: 14px; border-radius: 50px; font-weight: 900; cursor: pointer; border: none; margin-top: 10px; font-size: 16px; }
+        input { width: 100%; padding: 14px; margin: 10px 0; background: #1a1a1a; border: 1px solid #333; border-radius: 12px; color: white; text-align: center; font-size: 16px; outline: none; }
+        input:focus { border-color: #ffd700; }
+        .btn { width: 100%; padding: 14px; border-radius: 50px; font-weight: 900; cursor: pointer; border: none; margin-top: 10px; font-size: 16px; transition: 0.3s; }
         .btn-gold { background: #ffd700; color: black; }
+        .btn-gold:active { transform: scale(0.95); }
+        #status { font-size: 12px; margin-top: 15px; min-height: 20px; }
     </style>
 </head>
 <body>
 
 <div class="box">
     <h2 style="color:#ffd700; margin-bottom:20px;">دخول المملكة 👑</h2>
-    <input type="text" id="email" placeholder="اكتب الإيميل هنا">
-    <input type="password" id="pass" placeholder="اكتب الرمز هنا">
+    <input type="email" id="email" placeholder="بريدك الإلكتروني">
+    <input type="password" id="pass" placeholder="كلمة المرور">
     
     <button class="btn btn-gold" onclick="handleAuth('login')">دخول مباشر</button>
     <button class="btn" style="background:#222; color:white;" onclick="handleAuth('register')">إنشاء حساب جديد</button>
     
-    <p id="status" style="font-size:12px; color:orange; margin-top:15px;"></p>
+    <div id="status"></div>
 </div>
 
 <script>
-    // الإعدادات مأخوذة من لقطة الشاشة الخاصة بك بدقة
+    // الإعدادات مأخوذة من صورك البرمجية مباشرة لضمان العمل
     const firebaseConfig = {
         apiKey: "AIzaSyDnigkb4U-RE71r_Zy3tHAV9wWWe2L3nFQ", 
         authDomain: "masterchat-f2da9.firebaseapp.com",
@@ -37,36 +40,44 @@
         appId: "1:22103852654:web:8407e5f26cee469bb471493de0041ff6"
     };
 
-    firebase.initializeApp(firebaseConfig);
+    // بدء تشغيل Firebase
+    if (!firebase.apps.length) {
+        firebase.initializeApp(firebaseConfig);
+    }
     const auth = firebase.auth();
 
     async function handleAuth(type) {
         const status = document.getElementById('status');
-        // تنظيف الإيميل من أي مسافات مخفية قد تسبب خطأ "badly formatted"
-        const e = document.getElementById('email').value.replace(/\s+/g, '');
+        // تنظيف المدخلات من المسافات التي تسبب خطأ "badly formatted"
+        const e = document.getElementById('email').value.trim();
         const p = document.getElementById('pass').value.trim();
 
-        if(!e || !p) { status.innerText = "🚨 يرجى ملء الحقول أولاً!"; return; }
+        if(!e || !p) {
+            status.style.color = "orange";
+            status.innerText = "🚨 اكتب الإيميل والرمز أولاً!";
+            return;
+        }
 
-        status.innerText = "جاري الاتصال بالمملكة... ⏳";
+        status.style.color = "#ffd700";
+        status.innerText = "جاري المعالجة... ⏳";
 
         try {
             if(type === 'register') {
                 await auth.createUserWithEmailAndPassword(e, p);
                 status.style.color = "#00ff00";
-                status.innerText = "✅ تم إنشاء حسابك! اضغط دخول الآن.";
+                status.innerText = "✅ مبروك! تم إنشاء الحساب. اضغط دخول الآن.";
             } else {
                 await auth.signInWithEmailAndPassword(e, p);
                 status.style.color = "#00ff00";
-                status.innerText = "🔓 أهلاً بك يا إمبراطور! جاري الفتح...";
-                // سيتم تحويلك للشات هنا
+                status.innerText = "🔓 تم الدخول! أهلاً بك يا إمبراطور.";
+                // هنا يتم التوجيه لصفحة الشات
             }
         } catch (err) {
-            status.style.color = "red";
-            if(err.code === "auth/invalid-email") status.innerText = "❌ الإيميل مكتوب غلط (تأكد من @ و .)";
-            else if(err.code === "auth/email-already-in-use") status.innerText = "❌ هذا الحساب مسجل فعلاً، ادخل مباشرة.";
-            else if(err.code === "auth/wrong-password") status.innerText = "❌ الرمز الذي كتبته خطأ!";
-            else status.innerText = "⚠️ تنبيه: " + err.message;
+            status.style.color = "#ff4444";
+            if(err.code === "auth/invalid-email") status.innerText = "❌ الإيميل مكتوب بشكل خاطئ.";
+            else if(err.code === "auth/email-already-in-use") status.innerText = "❌ الحساب موجود فعلاً، ادخل مباشرة.";
+            else if(err.code === "auth/wrong-password") status.innerText = "❌ الرمز غير صحيح.";
+            else status.innerText = "⚠️ خطأ: " + err.message;
         }
     }
 </script>
