--- a/index.html
+++ b/index.html
@@ -3,31 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مملكة علوش | V137 👑</title>
+    <title>مملكة علوش | V138 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap');
         body { background: #000; color: white; font-family: 'Cairo', sans-serif; display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; }
         .box { width: 90%; max-width: 380px; background: #111; padding: 30px; border-radius: 20px; border: 2px solid #ffd700; text-align: center; }
-        input { width: 100%; padding: 14px; margin: 10px 0; background: #1a1a1a; border: 1px solid #333; border-radius: 12px; color: white; text-align: center; font-size: 16px; outline: none; }
-        .btn-gold { width: 100%; padding: 14px; background: #ffd700; color: black; border: none; border-radius: 50px; font-weight: bold; cursor: pointer; margin-top: 10px; }
-        #status-msg { margin-top: 15px; font-size: 13px; font-weight: bold; min-height: 20px; }
+        input { width: 100%; padding: 14px; margin: 10px 0; background: #1a1a1a; border: 1px solid #333; border-radius: 12px; color: white; text-align: center; font-size: 16px; outline: none; border: 1px solid transparent; transition: 0.3s; }
+        input:focus { border-color: #ffd700; }
+        .btn-gold { width: 100%; padding: 14px; background: #ffd700; color: black; border: none; border-radius: 50px; font-weight: bold; cursor: pointer; margin-top: 10px; font-size: 16px; }
+        #status-box { margin-top: 15px; font-size: 13px; font-weight: bold; min-height: 20px; }
     </style>
 </head>
 <body>
 
 <div class="box">
-    <h2 style="color:#ffd700;">دخول المملكة 👑</h2>
-    <input type="text" id="user-email" placeholder="الإيميل">
-    <input type="password" id="user-pass" placeholder="الرمز">
-    <button class="btn-gold" onclick="processAuth('signin')">دخول مباشر</button>
-    <button class="btn-gold" style="background:#222; color:white;" onclick="processAuth('signup')">إنشاء حساب جديد</button>
-    <div id="status-msg"></div>
+    <h2 style="color:#ffd700; margin-bottom: 20px;">دخول المملكة 👑</h2>
+    <input type="text" id="email-field" placeholder="الإيميل">
+    <input type="password" id="pass-field" placeholder="الرمز">
+    <button class="btn-gold" onclick="authProcess('login')">دخول مباشر</button>
+    <button class="btn-gold" style="background:#222; color:white;" onclick="authProcess('signup')">إنشاء حساب جديد</button>
+    <div id="status-box"></div>
 </div>
 
 <script>
-    // الإعدادات الرسمية من صورك الشخصية
+    // البيانات المستخرجة حرفياً من صورتك رقم 4 ورقم 5
     const firebaseConfig = {
         apiKey: "AIzaSyDnigkb4U-RE71r_Zy3tHAV9wWWe2L3nFQ", 
         authDomain: "masterchat-f2da9.firebaseapp.com",
@@ -35,32 +36,38 @@
         appId: "1:22103852654:web:8407e5f26cee469bb471493de0041ff6"
     };
 
-    firebase.initializeApp(firebaseConfig);
+    // تشغيل الفايربيس
+    if (!firebase.apps.length) {
+        firebase.initializeApp(firebaseConfig);
+    }
     const auth = firebase.auth();
 
-    async function processAuth(mode) {
-        const status = document.getElementById('status-msg');
-        // حل مشكلة "Badly Formatted" بمسح أي فراغات زائدة
-        const email = document.getElementById('user-email').value.trim();
-        const pass = document.getElementById('user-pass').value.trim();
+    async function authProcess(mode) {
+        const status = document.getElementById('status-box');
+        // تنظيف المدخلات تلقائياً (حل مشكلة Badly Formatted)
+        const email = document.getElementById('email-field').value.trim();
+        const pass = document.getElementById('pass-field').value.trim();
 
-        if(!email || !pass) { status.innerText = "🚨 املأ البيانات أولاً!"; return; }
-        status.style.color = "gold"; status.innerText = "جاري التحقق... ⏳";
+        if(!email || !pass) { status.style.color="orange"; status.innerText = "🚨 املأ الحقول أولاً!"; return; }
+        status.style.color = "gold"; status.innerText = "جاري الاتصال بالمملكة... ⏳";
 
         try {
             if(mode === 'signup') {
                 await auth.createUserWithEmailAndPassword(email, pass);
-                status.style.color = "lime"; status.innerText = "✅ تم إنشاء حسابك! اضغط دخول الآن.";
+                status.style.color = "#00ff00";
+                status.innerText = "✅ تم إنشاء الحساب! اضغط دخول الآن.";
             } else {
                 await auth.signInWithEmailAndPassword(email, pass);
-                status.style.color = "lime"; status.innerText = "🔓 مبروك! دخلت المملكة بنجاح.";
+                status.style.color = "#00ff00";
+                status.innerText = "🔓 أهلاً بك يا إمبراطور علوش!";
+                // هنا نضع الكود الذي يفتح الشات
             }
         } catch (err) {
             status.style.color = "#ff4444";
-            if(err.code === "auth/invalid-email") status.innerText = "❌ تأكد من كتابة @ و . بشكل صحيح";
-            else if(err.code === "auth/email-already-in-use") status.innerText = "❌ الحساب موجود، ادخل مباشرة";
+            if(err.code === "auth/invalid-email") status.innerText = "❌ الإيميل مكتوب غلط (تأكد من النقاط)";
+            else if(err.code === "auth/email-already-in-use") status.innerText = "❌ الحساب موجود فعلاً، ادخل مباشرة";
             else if(err.code === "auth/wrong-password") status.innerText = "❌ الرمز غير صحيح";
-            else status.innerText = "⚠️ " + err.message;
+            else status.innerText = "⚠️ خطأ: " + err.message;
         }
     }
 </script>
