--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        body { background: #000; color: #ffd700; font-family: sans-serif; margin: 0; padding: 20px; text-align: center; }
-        .container { max-width: 400px; margin: auto; background: #111; padding: 20px; border-radius: 15px; border: 2px solid #ffd700; }
-        input { width: 80%; padding: 10px; margin: 10px 0; border-radius: 5px; border: none; }
-        button { padding: 10px 20px; background: #ffd700; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
-        #chat-box { height: 300px; overflow-y: auto; background: #222; margin: 20px 0; padding: 10px; text-align: right; border-radius: 10px; }
-        .hidden { display: none; }
+        body { background: #000; color: #ffd700; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: center; padding: 20px; }
+        .box { background: #111; padding: 25px; border-radius: 15px; border: 2px solid #ffd700; display: inline-block; width: 320px; box-shadow: 0 0 20px rgba(255, 215, 0, 0.3); }
+        input { width: 90%; padding: 12px; margin: 10px 0; border-radius: 8px; border: none; text-align: center; background: #222; color: #fff; border: 1px solid #444; }
+        .btn { width: 95%; padding: 12px; background: #ffd700; color: #000; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; }
+        .btn:hover { background: #fff; }
+        #chat-area { display: none; margin-top: 20px; }
+        #msg-box { height: 300px; background: #1a1a1a; border-radius: 10px; overflow-y: auto; padding: 10px; text-align: right; margin-bottom: 10px; border: 1px solid #333; }
+        .status { margin-top: 10px; font-size: 14px; color: #fff; }
     </style>
 </head>
 <body>
 
-    <div id="auth-section" class="container">
+    <div id="login-area" class="box">
         <h2>دخول المملكة 👑</h2>
-        <input type="email" id="email" placeholder="الإيميل">
-        <input type="password" id="pass" placeholder="الرمز">
-        <button onclick="login()">دخول</button>
-        <p id="msg"></p>
+        <input type="email" id="email" placeholder="بريدك الإلكتروني">
+        <input type="password" id="pass" placeholder="كلمة المرور">
+        <button class="btn" onclick="start()">دخول للمملكة</button>
+        <div id="status" class="status"></div>
     </div>
 
-    <div id="chat-section" class="container hidden">
-        <h2>غرفة الدردشة 💬</h2>
-        <div id="chat-box"></div>
-        <input type="text" id="user-msg" placeholder="اكتب رسالتك...">
-        <button onclick="sendMsg()">إرسال</button>
-        <button onclick="firebase.auth().signOut()" style="background:red; color:white; margin-top:10px;">خروج</button>
+    <div id="chat-area" class="box" style="width: 400px;">
+        <h3>غرفة الدردشة 💬</h3>
+        <div id="msg-box"></div>
+        <input type="text" id="user-msg" placeholder="اكتب رسالتك هنا...">
+        <button class="btn" onclick="send()">إرسال</button>
+        <button onclick="firebase.auth().signOut()" style="background:none; border:none; color:red; cursor:pointer; margin-top:10px;">تسجيل خروج</button>
     </div>
 
 <script>
-    // إعدادات مشروعك masterchat-f2da9 من صورك
+    // بيانات مشروعك masterchat-f2da9 من الصور
     const config = {
         apiKey: "AIzaSyDnigkb4U-RE71r_Zy3tHAV9wWWe2L3nFQ",
         authDomain: "masterchat-f2da9.firebaseapp.com",
@@ -46,30 +48,36 @@
     const auth = firebase.auth();
     const db = firebase.database();
 
-    // مراقبة حالة المستخدم
+    // مراقبة حالة المستخدم (هل هو داخل أم خارج؟)
     auth.onAuthStateChanged(user => {
         if (user) {
-            document.getElementById('auth-section').classList.add('hidden');
-            document.getElementById('chat-section').classList.remove('hidden');
+            document.getElementById('login-area').style.display = 'none';
+            document.getElementById('chat-area').style.display = 'inline-block';
             loadMessages();
         } else {
-            document.getElementById('auth-section').classList.remove('hidden');
-            document.getElementById('chat-section').classList.add('hidden');
+            document.getElementById('login-area').style.display = 'inline-block';
+            document.getElementById('chat-area').style.display = 'none';
         }
     });
 
-    function login() {
-        const e = document.getElementById('email').value;
-        const p = document.getElementById('pass').value;
-        auth.signInWithEmailAndPassword(e, p).catch(() => auth.createUserWithEmailAndPassword(e, p));
+    function start() {
+        const s = document.getElementById('status');
+        const e = document.getElementById('email').value.trim();
+        const p = document.getElementById('pass').value.trim();
+        if(!e || !p) { s.innerText = "🚨 املأ البيانات"; return; }
+        
+        s.innerText = "جاري التحقق... ⏳";
+        auth.signInWithEmailAndPassword(e, p).catch(() => {
+            auth.createUserWithEmailAndPassword(e, p).catch(err => s.innerText = "⚠️ " + err.message);
+        });
     }
 
-    function sendMsg() {
-        const text = document.getElementById('user-msg').value;
-        if(text) {
-            db.ref('messages').push({
-                user: auth.currentUser.email,
-                text: text,
+    function send() {
+        const txt = document.getElementById('user-msg').value;
+        if(txt) {
+            db.ref('msgs').push({
+                user: auth.currentUser.email.split('@')[0],
+                text: txt,
                 time: Date.now()
             });
             document.getElementById('user-msg').value = '';
@@ -77,12 +85,11 @@
     }
 
     function loadMessages() {
-        db.ref('messages').on('child_added', snap => {
-            const data = snap.val();
-            const div = document.createElement('div');
-            div.innerHTML = `<small>${data.user}</small><br>${data.text}<hr>`;
-            document.getElementById('chat-box').appendChild(div);
-            document.getElementById('chat-box').scrollTop = document.getElementById('chat-box').scrollHeight;
+        const box = document.getElementById('msg-box');
+        db.ref('msgs').limitToLast(20).on('child_added', snap => {
+            const d = snap.val();
+            box.innerHTML += `<div><b style="color:gold">${d.user}:</b> <span style="color:white">${d.text}</span></div>`;
+            box.scrollTop = box.scrollHeight;
         });
     }
 </script>
