--- a/index.html
+++ b/index.html
@@ -2,95 +2,49 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>مملكة علوش للدردشة 👑</title>
+    <title>مملكة علوش 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        body { background: #000; color: #ffd700; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: center; padding: 20px; }
-        .box { background: #111; padding: 25px; border-radius: 15px; border: 2px solid #ffd700; display: inline-block; width: 320px; box-shadow: 0 0 20px rgba(255, 215, 0, 0.3); }
-        input { width: 90%; padding: 12px; margin: 10px 0; border-radius: 8px; border: none; text-align: center; background: #222; color: #fff; border: 1px solid #444; }
-        .btn { width: 95%; padding: 12px; background: #ffd700; color: #000; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; transition: 0.3s; }
-        .btn:hover { background: #fff; }
-        #chat-area { display: none; margin-top: 20px; }
-        #msg-box { height: 300px; background: #1a1a1a; border-radius: 10px; overflow-y: auto; padding: 10px; text-align: right; margin-bottom: 10px; border: 1px solid #333; }
-        .status { margin-top: 10px; font-size: 14px; color: #fff; }
+        body { background: #000; color: #ffd700; font-family: sans-serif; text-align: center; padding-top: 50px; }
+        .box { background: #111; padding: 30px; border-radius: 20px; border: 2px solid #ffd700; display: inline-block; width: 300px; box-shadow: 0 0 20px #ffd70055; }
+        input { width: 90%; padding: 12px; margin: 10px 0; border-radius: 8px; border: none; text-align: center; background: #222; color: #fff; }
+        .btn { width: 95%; padding: 12px; background: #ffd700; color: #000; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        #status { margin-top: 15px; font-weight: bold; }
     </style>
 </head>
 <body>
-
-    <div id="login-area" class="box">
+    <div class="box">
         <h2>دخول المملكة 👑</h2>
-        <input type="email" id="email" placeholder="بريدك الإلكتروني">
+        <input type="email" id="email" placeholder="البريد الإلكتروني">
         <input type="password" id="pass" placeholder="كلمة المرور">
-        <button class="btn" onclick="start()">دخول للمملكة</button>
-        <div id="status" class="status"></div>
-    </div>
-
-    <div id="chat-area" class="box" style="width: 400px;">
-        <h3>غرفة الدردشة 💬</h3>
-        <div id="msg-box"></div>
-        <input type="text" id="user-msg" placeholder="اكتب رسالتك هنا...">
-        <button class="btn" onclick="send()">إرسال</button>
-        <button onclick="firebase.auth().signOut()" style="background:none; border:none; color:red; cursor:pointer; margin-top:10px;">تسجيل خروج</button>
+        <button class="btn" onclick="login()">دخول الآن</button>
+        <div id="status"></div>
     </div>
 
 <script>
-    // بيانات مشروعك masterchat-f2da9 من الصور
-    const config = {
-        apiKey: "AIzaSyDnigkb4U-RE71r_Zy3tHAV9wWWe2L3nFQ",
+    // البيانات الصحيحة 100% من صورتك الأخيرة
+    const firebaseConfig = {
+        apiKey: "AIzaSyDpjqkb4U-RF71r_Zv3tHAV9wWWe2L3pEQ", 
         authDomain: "masterchat-f2da9.firebaseapp.com",
         databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com",
         projectId: "masterchat-f2da9"
     };
-    firebase.initializeApp(config);
+    firebase.initializeApp(firebaseConfig);
 
-    const auth = firebase.auth();
-    const db = firebase.database();
-
-    // مراقبة حالة المستخدم (هل هو داخل أم خارج؟)
-    auth.onAuthStateChanged(user => {
-        if (user) {
-            document.getElementById('login-area').style.display = 'none';
-            document.getElementById('chat-area').style.display = 'inline-block';
-            loadMessages();
-        } else {
-            document.getElementById('login-area').style.display = 'inline-block';
-            document.getElementById('chat-area').style.display = 'none';
-        }
-    });
-
-    function start() {
+    function login() {
         const s = document.getElementById('status');
         const e = document.getElementById('email').value.trim();
         const p = document.getElementById('pass').value.trim();
-        if(!e || !p) { s.innerText = "🚨 املأ البيانات"; return; }
-        
-        s.innerText = "جاري التحقق... ⏳";
-        auth.signInWithEmailAndPassword(e, p).catch(() => {
-            auth.createUserWithEmailAndPassword(e, p).catch(err => s.innerText = "⚠️ " + err.message);
-        });
-    }
+        s.innerText = "جاري فتح البوابات... ⏳";
 
-    function send() {
-        const txt = document.getElementById('user-msg').value;
-        if(txt) {
-            db.ref('msgs').push({
-                user: auth.currentUser.email.split('@')[0],
-                text: txt,
-                time: Date.now()
+        firebase.auth().signInWithEmailAndPassword(e, p)
+            .then(() => s.innerHTML = "<span style='color:lime'>🔓 مبروك! انفتحت الأبواب.</span>")
+            .catch(() => {
+                firebase.auth().createUserWithEmailAndPassword(e, p)
+                    .then(() => s.innerHTML = "<span style='color:lime'>✅ تم تسجيلك بنجاح!</span>")
+                    .catch(err => s.innerHTML = "<span style='color:red'>⚠️ " + err.message + "</span>");
             });
-            document.getElementById('user-msg').value = '';
-        }
-    }
-
-    function loadMessages() {
-        const box = document.getElementById('msg-box');
-        db.ref('msgs').limitToLast(20).on('child_added', snap => {
-            const d = snap.val();
-            box.innerHTML += `<div><b style="color:gold">${d.user}:</b> <span style="color:white">${d.text}</span></div>`;
-            box.scrollTop = box.scrollHeight;
-        });
     }
 </script>
 </body>
